--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,2 @@
-student.provider.url=http://localhost:8080/addd
+student.provider.url=http://localhost:8080/add
 student.provider.url2=http://localhost:8080/get/
